feat: migrate scrapers to Puppeteer, improve notifications, and add email delivery
- Replaced Axios + Cheerio with Puppeteer for dynamic page scraping
- Updated job notification formatting for clarity and consistency
- Added @everyone pings to Discord alerts
- Implemented email-sending feature for latest job posts found
- Refactored scraper + notifier flow to support richer metadata

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node --no-deprecation --import ./loader.mjs src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test:notify": "node --no-deprecation --import ./loader.mjs src/test-notification.ts"
+    "test:notify": "node --no-deprecation --import ./loader.mjs src/test-notification.ts",
+    "clear-db": "rm jobs.db"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +18,13 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "@types/node-cron": "^3.0.11",
-    "axios": "^1.13.2",
+    "@types/nodemailer": "^7.0.4",
     "better-sqlite3": "^12.4.6",
-    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "firecrawl": "^4.6.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
+    "puppeteer": "^24.31.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
