--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sparticuz/chromium": "^141.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "@types/node-cron": "^3.0.11",
@@ -25,7 +24,7 @@
     "firecrawl": "^4.6.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
-    "puppeteer-core": "^24.31.0",
+    "puppeteer": "^24.31.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
