--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.4",
     "better-sqlite3": "^12.4.6",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "firecrawl": "^4.6.2",
     "node-cron": "^4.2.1",
