--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "node --no-deprecation --import ./loader.mjs src/index.ts",
     "build": "puppeteer browsers install chrome && tsc",
     "start": "node dist/index.js",
-    "test:notify": "node --no-deprecation --import ./loader.mjs src/test-notification.ts",
+    "test:notify": "node --no-deprecation --import ./loader.mjs src/test/test-notification.ts",
+    "test:email": "node --no-deprecation --import ./loader.mjs src/test/test-email.ts",
+    "test:ping": "node --no-deprecation --import ./loader.mjs src/test/test-ping.ts",
+    "test:download": "node --no-deprecation --import ./loader.mjs src/test/test-download.ts",
     "clear-db": "rm jobs.db"
   },
   "keywords": [],
@@ -18,14 +21,13 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^7.0.4",
     "better-sqlite3": "^12.4.6",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "firecrawl": "^4.6.2",
     "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.11",
     "puppeteer": "^24.31.0",
+    "resend": "^6.5.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
